# SFML_CMake

./: .gitmodules  CMakeLists.txt  copy_assets.bat  run.bat
assets/scripts/: script.lua
libs/LuaBridge/: RefCountedObject.h  RefCountedPtr.h
libs/LuaBridge/detail/: CFunctions.h  FuncTraits.h  Iterator.h  LuaRef.h  Namespace.h  Stack.h  TypeList.h  TypeTraits.h  Userdata.h
src/: Components.h  Entity.h  Game.cpp  Game.h  Globals.h  Lua.hpp  Main.cpp
